--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
   "author": "Luke Elliott <revlucio@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^24.8.0"
+    "husky": "^2.4.1",
+    "jest": "^24.8.0",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "dependencies": {
     "request": "^2.88.0"
